Fixed stacking issues with card img hover by adding z-index to nav

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -95,6 +95,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 
   .nav-branding {
     font-size: $nav-size;
